assert-struct/tests/snapshots/nested__deeply_nested_slice_pattern.snap
---
source: assert-struct/tests/nested.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/nested_errors/deeply_nested_slice_pattern.rs:39:30
   |
39 |                 values: [10, 25, 30],  // Line 38 - should report this line (20 != 25)
   |                              ^^ got 20
